src/components/Main/AboutMe/AboutMe.scss
@import '../../../styles/shared';
@import '../../../styles/colors';
@import '../../../styles/landing';
@import '../../../styles/gaps';

.aboutme {
  @extend %default-padding-landing;

  padding: {
    top: 110px;
    bottom: 100px;
  }

  &__title {
    @include landing-heading;
  }

  &__content {
    display: flex;
    justify-content: space-between;

    flex-direction: row-reverse;
    @media screen and (max-width: $breakpoint-mobile) {
      flex-direction: column;
    }

    padding-top: 66px;
  }

  &__image {
    align-self: center;

    max-width: 270px;
    max-height: 327px;

    border-radius: 10px;
  }

  &__student {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 26px;
    max-width: 600px;
  }

  &__heading {
    @include landing-title;

    @include landing-title-mobile;
  }

  &__subheading {
    @include aboutme-subheading;

    font-weight: 500;
    margin: 0;
  }

  &__text {
    margin: 0;

    font-size: $default-font-size-texts;
    line-height: 157%;
  }

  &__links {
    @include default-gap-small;

    display: flex;

    position: absolute;
    bottom: 0;
    left: 0;
  }

  &__link {
    @include link-shared;
    @include landing-list-item-small;
    @extend %default-link-effects;

    font-weight: 500;
  }
}

